# chatGPT_Meraki_Event_Analyzer

./: README.md  pyproject.toml
src/chatgpt_meraki_analyzer/: chatgpt_meraki_analyzer.py  script.py
